<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_add">Add</string>
    <string name="action_apply">Apply</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_close">Close</string>
    <string name="action_create">Create</string>
    <string name="action_create_list">Create list</string>
    <string name="action_delete">Delete</string>
    <string name="action_done">Done</string>
    <string name="action_next">Next</string>
    <string name="action_save">Save</string>
    <string name="action_search">Search</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="action_skip">Skip</string>
    <string name="action_start">Start</string>
    <string name="app_name">Stash</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com.crashlytics.android.build_id">b3bf036e-f586-4152-890a-2ca20595179a</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b&gt;facebook.com/device&lt;/b&gt; and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">You\'re in control - choose what info you want to share with apps.</string>
    <string name="common_completed">Completed</string>
    <string name="common_empty_add_games">Add your first games</string>
    <string name="common_empty_list_title">The list is empty</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_not_available">n/a</string>
    <string name="common_not_found">Not Found</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_played">Played</string>
    <string name="common_playing">Playing</string>
    <string name="common_policy">Privacy Policy</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="common_terms">Terms of Use</string>
    <string name="common_want">Want</string>
    <string name="common_zero">0</string>
    <string name="company_developer">developer</string>
    <string name="company_porting">porting</string>
    <string name="company_publisher">publisher</string>
    <string name="company_supporting">supporting</string>
    <string name="contact_us_send_email">Send email</string>
    <string name="contact_us_subject">Message from user: %1$d</string>
    <string name="contact_us_text">%1$s app version: %2$s(%3$d).\10Platform: %4$s\10User id: %5$d \10\10\10</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="default_web_client_id">767397334359-3j7bksgp201vs99q5jf9jpf5g0nbcfo2.apps.googleusercontent.com</string>
    <string name="error_auth">Authorization failed</string>
    <string name="error_common">Something went wrong</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_no_network">No internet connection</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="facebook_app_id">1016182518591786</string>
    <string name="fallback_menu_item_copy_link">Copy link</string>
    <string name="fallback_menu_item_open_in_browser">Open in browser</string>
    <string name="fallback_menu_item_share_link">Share link</string>
    <string name="fb_login_protocol_scheme">fb1016182518591786</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="filter_field_completed">Completed</string>
    <string name="filter_field_genre">Genre</string>
    <string name="filter_field_not_completed">Not Completed</string>
    <string name="filter_field_platform">Platform</string>
    <string name="filter_field_release_year">Release Year</string>
    <string name="filter_field_releases">Hide Unreleased</string>
    <string name="filter_sort_by">Sort by</string>
    <string name="filter_value">%1$s &lt;font color=#f7bf00&gt;%2$s&lt;/font&gt;</string>
    <string name="firebase_database_url">https://stashapp-6f9a4.firebaseio.com</string>
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="game_dlcs">DLCs</string>
    <string name="game_original_game">Original game</string>
    <string name="game_series">Game series</string>
    <string name="game_write_review">Write a review…</string>
    <string name="home_latest_releases">⚡ Latest releases</string>
    <string name="home_most_anticipated">�� Most anticipated</string>
    <string name="home_send_feedback">�� Take the survey</string>
    <string name="home_top_rated">Top Rated Games</string>
    <string name="home_upcoming">⏳ Upcoming</string>
    <string name="ob_how_use_stah">How to use Stash</string>
    <string name="settings_contact_us">Contact Us</string>
    <string name="settings_facebook">Facebook</string>
    <string name="settings_general">General</string>
    <string name="settings_hide_profile">Hide profile</string>
    <string name="settings_legal">Legal</string>
    <string name="settings_name">Your Name</string>
    <string name="settings_nickname">Nickname</string>
    <string name="settings_privacy">Privacy</string>
    <string name="settings_rate_us">Rate Us</string>
    <string name="settings_send_feedback">Take the survey</string>
    <string name="settings_sign_out">Sign Out</string>
    <string name="settings_social_networks">Social networks</string>
    <string name="settings_support">Support</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_twitter">Twitter</string>
</resources>