<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <include android:id="@+id/appbar" layout="@layout/view_appbar"/>
    <androidx.core.widget.NestedScrollView android:layout_width="match_parent" android:layout_height="match_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageView android:layout_gravity="center_horizontal" android:id="@+id/image_avatar" android:layout_width="80dp" android:layout_height="80dp" android:layout_marginTop="@dimen/space_xlarge" android:src="@drawable/ic_profile_circle"/>
            <com.google.android.material.textfield.TextInputLayout android:theme="@style/Widget.Stash.TextInputLayout" android:textColorHint="@color/color_secondary_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_xlarge" android:hint="@string/settings_name" android:layout_marginStart="@dimen/space_medium" android:layout_marginEnd="@dimen/space_medium" app:boxBackgroundColor="@color/gray_300" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText android:textStyle="bold" android:id="@+id/field_name" android:background="@android:color/transparent" android:paddingTop="@dimen/space_small" android:paddingBottom="@dimen/space_small" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="0dp" android:paddingEnd="0dp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <View android:layout_marginStart="@dimen/space_medium" android:layout_marginEnd="@dimen/space_medium" style="@style/Widget.Stash.HorizontalDivider"/>
            <com.google.android.material.textfield.TextInputLayout android:theme="@style/Widget.Stash.TextInputLayout" android:textColorHint="@color/color_secondary_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_large" android:hint="@string/settings_nickname" android:layout_marginStart="@dimen/space_medium" android:layout_marginEnd="@dimen/space_medium" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText android:textStyle="bold" android:id="@+id/field_nickname" android:background="@android:color/transparent" android:paddingTop="@dimen/space_small" android:paddingBottom="@dimen/space_small" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="0dp" android:paddingEnd="0dp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <View android:layout_marginStart="@dimen/space_medium" android:layout_marginEnd="@dimen/space_medium" style="@style/Widget.Stash.HorizontalDivider"/>
            <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/text_small" android:textStyle="bold" android:textColor="@color/color_secondary_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_large" android:text="@string/settings_general" android:layout_marginStart="@dimen/space_medium" android:layout_marginEnd="@dimen/space_medium"/>
            <p255io.stashteam.stashapp.p298ui.widgets.itemviews.SettingItemView android:id="@+id/item_theme" android:background="?android:attr/selectableItemBackground" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_small" app:titleRes="@string/settings_theme"/>
            <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/text_small" android:textStyle="bold" android:textColor="@color/color_secondary_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_large" android:text="@string/settings_privacy" android:layout_marginStart="@dimen/space_medium" android:layout_marginEnd="@dimen/space_medium"/>
            <View android:layout_marginTop="@dimen/space_small" android:layout_marginStart="@dimen/space_medium" android:layout_marginEnd="@dimen/space_medium" style="@style/Widget.Stash.HorizontalDivider"/>
            <com.google.android.material.switchmaterial.SwitchMaterial android:textSize="@dimen/text_medium" android:textStyle="bold" android:textColor="@color/color_primary_text" android:id="@+id/switch_hide_profile" android:layout_width="match_parent" android:layout_height="48dp" android:text="@string/settings_hide_profile" android:layout_marginStart="@dimen/space_medium" android:layout_marginEnd="@dimen/space_medium"/>
            <View android:layout_marginStart="@dimen/space_medium" android:layout_marginEnd="@dimen/space_medium" style="@style/Widget.Stash.HorizontalDivider"/>
            <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/text_small" android:textStyle="bold" android:textColor="@color/color_secondary_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_large" android:text="@string/settings_support" android:layout_marginStart="@dimen/space_medium" android:layout_marginEnd="@dimen/space_medium"/>
            <p255io.stashteam.stashapp.p298ui.widgets.itemviews.SettingItemView android:id="@+id/item_rate_us" android:background="?android:attr/selectableItemBackground" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_small" app:bottomDivider="false" app:titleRes="@string/settings_rate_us"/>
            <p255io.stashteam.stashapp.p298ui.widgets.itemviews.SettingItemView android:id="@+id/item_send_feedback" android:background="?android:attr/selectableItemBackground" android:layout_width="match_parent" android:layout_height="wrap_content" app:bottomDivider="false" app:titleRes="@string/settings_send_feedback"/>
            <p255io.stashteam.stashapp.p298ui.widgets.itemviews.SettingItemView android:id="@+id/item_contact_us" android:background="?android:attr/selectableItemBackground" android:layout_width="match_parent" android:layout_height="wrap_content" app:titleRes="@string/settings_contact_us"/>
            <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/text_small" android:textStyle="bold" android:textColor="@color/color_secondary_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_large" android:text="@string/settings_social_networks" android:layout_marginStart="@dimen/space_medium" android:layout_marginEnd="@dimen/space_medium"/>
            <p255io.stashteam.stashapp.p298ui.widgets.itemviews.SettingItemView android:id="@+id/item_facebook" android:background="?android:attr/selectableItemBackground" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_small" app:bottomDivider="false" app:leftIconRes="@drawable/ic_facebook" app:titleRes="@string/settings_facebook"/>
            <p255io.stashteam.stashapp.p298ui.widgets.itemviews.SettingItemView android:id="@+id/item_twitter" android:background="?android:attr/selectableItemBackground" android:layout_width="match_parent" android:layout_height="wrap_content" app:leftIconRes="@drawable/ic_twitter" app:titleRes="@string/settings_twitter"/>
            <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/text_small" android:textStyle="bold" android:textColor="@color/color_secondary_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_large" android:text="@string/settings_legal" android:layout_marginStart="@dimen/space_medium" android:layout_marginEnd="@dimen/space_medium"/>
            <p255io.stashteam.stashapp.p298ui.widgets.itemviews.SettingItemView android:id="@+id/item_terms" android:background="?android:attr/selectableItemBackground" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_small" app:bottomDivider="false" app:titleRes="@string/common_terms"/>
            <p255io.stashteam.stashapp.p298ui.widgets.itemviews.SettingItemView android:id="@+id/item_policy" android:background="?android:attr/selectableItemBackground" android:layout_width="match_parent" android:layout_height="wrap_content" app:titleRes="@string/common_policy"/>
            <com.google.android.material.button.MaterialButton android:textSize="@dimen/text_medium" android:textStyle="bold" android:textColor="@color/red" android:layout_gravity="center_horizontal" android:id="@+id/btn_logout" android:layout_width="match_parent" android:layout_marginTop="@dimen/space_xlarge" android:layout_marginBottom="@dimen/space_xlarge" android:text="@string/settings_sign_out" android:layout_marginStart="@dimen/space_medium" android:layout_marginEnd="@dimen/space_medium" app:backgroundTint="?attr/colorSurface" app:rippleColor="@color/gray_200" style="@style/Widget.Stash.Button.Rounded"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
