<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
    <p255io.stashteam.stashapp.p298ui.widgets.itemviews.InfoItemView android:id="@+id/info_item_parent_game" android:background="@drawable/bg_info_item" android:layout_width="match_parent" android:layout_height="44dp" android:layout_marginBottom="@dimen/space_xsmall" app:leftIconRes="@drawable/ic_gamecontrol" app:rightArrowEnable="true" app:titleRes="@string/game_original_game"/>
    <p255io.stashteam.stashapp.p298ui.widgets.itemviews.InfoItemView android:id="@+id/info_item_series" android:background="@drawable/bg_info_item" android:layout_width="match_parent" android:layout_height="44dp" android:layout_marginBottom="@dimen/space_xsmall" app:leftIconRes="@drawable/ic_list" app:rightArrowEnable="true" app:titleRes="@string/game_series"/>
    <p255io.stashteam.stashapp.p298ui.widgets.itemviews.InfoItemView android:id="@+id/info_item_addons" android:background="@drawable/bg_info_item" android:layout_width="match_parent" android:layout_height="44dp" android:layout_marginBottom="@dimen/space_xsmall" app:leftIconRes="@drawable/ic_addon" app:rightArrowEnable="true" app:titleRes="@string/game_dlcs"/>
    <p255io.stashteam.stashapp.p298ui.widgets.itemviews.InfoItemView android:id="@+id/info_item_developer" android:background="@drawable/bg_info_item" android:layout_width="match_parent" android:layout_height="44dp" android:layout_marginBottom="@dimen/space_xsmall" app:leftIconRes="@drawable/ic_developer" app:rightArrowEnable="true" app:subtitleRes="@string/company_developer"/>
    <p255io.stashteam.stashapp.p298ui.widgets.itemviews.InfoItemView android:id="@+id/info_item_publisher" android:layout_width="match_parent" android:layout_height="44dp" app:leftIconRes="@drawable/ic_publisher" app:rightArrowEnable="false" app:subtitleRes="@string/company_publisher"/>
</merge>
