<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:fillViewport="true">
    <View android:layout_gravity="center_horizontal" android:layout_marginTop="@dimen/space_pre_medium" style="@style/Widget.Stash.DraggableLine"/>
    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/text_medium" android:textStyle="bold" android:textColor="?android:attr/textColorPrimary" android:id="@+id/text_name" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_medium" android:layout_marginStart="@dimen/space_medium" android:layout_marginEnd="@dimen/space_medium"/>
    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/text_small" android:textColor="?android:attr/textColorSecondary" android:id="@+id/text_release_date" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="2dp" android:layout_marginStart="@dimen/space_medium" android:layout_marginEnd="@dimen/space_medium"/>
    <com.google.android.material.chip.ChipGroup android:id="@+id/chip_group" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/space_medium" app:chipSpacingHorizontal="@dimen/space_medium" app:selectionRequired="true" app:singleSelection="true">
        <com.google.android.material.chip.Chip android:id="@+id/chip_playing" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/common_playing" style="@style/Widget.Stash.Chip.Choice"/>
        <com.google.android.material.chip.Chip android:id="@+id/chip_played" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/common_played" style="@style/Widget.Stash.Chip.Choice"/>
        <com.google.android.material.chip.Chip android:id="@+id/chip_completed" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/common_completed" style="@style/Widget.Stash.Chip.Choice"/>
    </com.google.android.material.chip.ChipGroup>
    <View style="@style/Widget.Stash.HorizontalDivider"/>
    <com.google.android.material.textfield.TextInputEditText android:textSize="@dimen/text_medium" android:textColor="@color/color_primary_text" android:gravity="top" android:id="@+id/input_review" android:background="@android:color/transparent" android:layout_width="match_parent" android:layout_height="80dp" android:layout_margin="@dimen/space_medium" android:hint="@string/game_write_review"/>
    <View style="@style/Widget.Stash.HorizontalDivider"/>
    <p255io.stashteam.stashapp.p298ui.widgets.rate.RateView android:id="@+id/rate_view" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_medium" android:layout_marginBottom="@dimen/space_medium" android:layout_marginStart="@dimen/space_medium"/>
    <com.google.android.material.button.MaterialButton android:textStyle="bold" android:textColor="@color/black" android:id="@+id/btn_save" android:layout_width="match_parent" android:layout_height="48dp" android:text="@string/action_save" android:stateListAnimator="@null" style="@style/Widget.Stash.Button"/>
</LinearLayout>
