<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout android:id="@+id/swipe_refresh" android:layout_width="match_parent" android:layout_height="match_parent">
        <androidx.core.widget.NestedScrollView android:id="@+id/layout_home_content" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent">
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                <p255io.stashteam.stashapp.p298ui.home.HorizontalListView android:id="@+id/list_view_anticipated" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_medium" app:titleRes="@string/home_most_anticipated" app:titleSize="@dimen/text_huge"/>
                <com.google.android.material.card.MaterialCardView android:id="@+id/card_feedback" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_medium" android:layout_marginStart="@dimen/space_medium" android:layout_marginEnd="@dimen/space_medium" app:cardBackgroundColor="@color/color_surface" app:cardCornerRadius="@dimen/card_corner_radius" app:cardElevation="@dimen/elevation_small">
                    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/text_xxlarge" android:textColor="?android:attr/textColorPrimary" android:gravity="center" android:paddingTop="@dimen/space_medium" android:paddingBottom="@dimen/space_medium" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/home_send_feedback" android:fontFamily="@string/font_family_black"/>
                </com.google.android.material.card.MaterialCardView>
                <p255io.stashteam.stashapp.p298ui.home.HorizontalListView android:id="@+id/list_view_latest" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_medium" app:titleRes="@string/home_latest_releases" app:titleSize="@dimen/text_xxlarge"/>
                <p255io.stashteam.stashapp.p298ui.home.HorizontalListView android:id="@+id/list_view_upcoming" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_medium" app:titleRes="@string/home_upcoming" app:titleSize="@dimen/text_xxlarge"/>
                <com.google.android.material.card.MaterialCardView android:id="@+id/card_top_rated" android:layout_width="match_parent" android:layout_height="144dp" android:layout_marginTop="@dimen/space_medium" android:layout_marginBottom="@dimen/space_medium" android:layout_marginStart="@dimen/space_medium" android:layout_marginEnd="@dimen/space_medium" app:cardBackgroundColor="@color/color_surface" app:cardCornerRadius="@dimen/card_corner_radius" app:cardElevation="@dimen/elevation_small">
                    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginStart="@dimen/space_medium" android:layout_marginEnd="@dimen/space_medium">
                        <androidx.emoji.widget.EmojiAppCompatTextView android:textSize="32sp" android:textColor="#ff000000" android:gravity="center" android:id="@+id/text_emoji" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
                        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/text_xxlarge" android:textColor="?android:attr/textColorPrimary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_small" android:text="@string/home_top_rated" android:fontFamily="@string/font_family_black"/>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
