<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:background="@drawable/bg_gradient_yellow" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/text_xxxlarge" android:textColor="@color/black" android:id="@+id/text_header" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_large" android:text="@string/ob_how_use_stah" android:fontFamily="@string/font_family_black" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <VideoView android:id="@+id/video_view" android:layout_width="0dp" android:layout_height="0dp" android:layout_marginTop="@dimen/space_xxlarge" android:layout_marginBottom="@dimen/space_xxlarge" app:layout_constraintBottom_toTopOf="@+id/btn_start" app:layout_constraintDimensionRatio="9:18" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/text_header"/>
    <View android:background="@drawable/fg_onboarding_video" android:layout_width="0dp" android:layout_height="0dp" android:layout_marginTop="26dp" android:layout_marginBottom="26dp" app:layout_constraintBottom_toTopOf="@+id/btn_start" app:layout_constraintDimensionRatio="9:17" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/text_header"/>
    <com.google.android.material.button.MaterialButton android:textStyle="bold" android:textColor="@color/white_real" android:id="@+id/btn_start" android:layout_width="wrap_content" android:layout_marginBottom="@dimen/space_medium" android:text="@string/action_start" android:textAllCaps="true" android:paddingStart="48dp" android:paddingEnd="48dp" app:backgroundTint="@color/black" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:rippleColor="@color/color_primary" style="@style/Widget.Stash.Button.Rounded"/>
</androidx.constraintlayout.widget.ConstraintLayout>
